making markup prettier

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "<h1>PyHEP 2020: A Practical Analysis in Coffea</h1>\n",
-    "<p>[TODO: Authors]</p>\n",
+    "<h2>Authors</h2>\n",
+    "<p><b>Presenter:</b> Mat Adamec (<i>UNL</i>)</p>\n",
+    "<p><b>Coffea:</b> Matteo Cremonesi, Lindsey Gray, Nick Smith\n",
+    "<p><b>coffea-casa:</b> Garhan Attebury (<i>UNL-HCC</i>), Ken Bloom (<i>UNL</i>), Brian Bockelman (<i>Morgridge Institute</i>), Carl Lundstedt (<i>UNL-HCC</i>), Mátyás Selmeci (<i>UWM</i>), Oksana Shadura (<i>UNL</i>), Derek Wietzel (<i>UNL-HCC</i>)</p>\n",
     "<hr />\n",
     "<h2>Introduction</h2>\n",
     "<p>This tutorial is intended to be a walkthrough of the foundations of an analysis implemented in Coffea (specifically, single top-Higgs production, https://doi.org/10.1103/PhysRevD.99.092005). We will go through data selection in a columnar regime, how to handle some edge cases, and plot some relevant data. At the end, we will wrap everything together and demonstrate how Coffea can be easily deployed for scaling an analysis up, which is also a prime opportunity to show off a prototype analysis facility being developed by the coffea-casa team.</p>\n",
@@ -50,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Effectively, this loads in \"file\" into a flat array, \"events\". We can poke around \"events\" by looking at the \".columns\" attribute, which tells us all of the possible fields we can access.</p>"
+    "<p>Effectively, this loads in <code>file</code> into a flat array, <code>events</code>. We can poke around <code>events</code> by looking at the <code>.columns</code> attribute, which tells us all of the possible fields we can access.</p>"
    ]
   },
   {
@@ -79,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>These fields can be accessed as attributes of the event array. For example, to peek at Muons:</p>"
+    "<p>These fields can be accessed as attributes of the event array. For example, to peek at <code>Muon</code>:</p>"
    ]
   },
   {
@@ -105,9 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Notice that events.Muon is a jagged array; an array of subarrays! The number of subarrays is equivalent to the size of the events array. However, each subarray has an arbitrary amount of muons. In total, there are 100918 muons, but still only 100000 subarrays.</p>\n",
+    "<p>Notice that <code>events.Muon</code> is a jagged array; an array of subarrays! The number of subarrays is equivalent to the size of the events array. However, each subarray has an arbitrary amount of muons. In total, there are 100918 muons, but still only 100000 subarrays.</p>\n",
     "\n",
-    "<p>The Muon array (and any other column beneath events) also has further depth to it. We can look at its columns just as we did with the events array, and we can access any of them as an attribute of events.Muon:"
+    "<p>The <code>Muon</code> array (and any other column beneath events) also has further depth to it. We can look at its columns just as we did with the events array, and we can access any of them as an attribute of <code>events.Muon</code>:"
    ]
   },
   {
@@ -136,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, possibly the most critical component of columnar analysis is the concept of masking. A mask is an array of booleans, which another array can be masked by, thus accepting or rejecting elements of that array based on whether the corresponding mask element is True or False. A basic example below:"
+    "Now, possibly the most critical component of columnar analysis is the concept of masking. A mask is an array of booleans, which another array can be masked by, thus accepting or rejecting elements of that array based on whether the corresponding mask element is <code>True</code> or <code>False</code>. A basic example below:"
    ]
   },
   {
@@ -284,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Let's do the same thing for electrons, which are slightly complicated because some of the cuts fall into a set of two ranges: 0 < |$\\eta$| < 1.479 and 1.479 < |$\\eta$| < 2.5. These are listed respectively in parentheses: (range 1, range 2).</p>\n",
+    "<p>Let's do the same thing for electrons, which are slightly complicated because some of the cuts fall into a set of two ranges: 0 < |$\\eta$| < 1.479 and 1.479 < |$\\eta$| < 2.5. These are listed respectively in parentheses: (<i>range 1, range 2</i>).</p>\n",
     "\n",
     "| Cut                                     | Loose        | Tight        |\n",
     "|-----------------------------------------|--------------|--------------|\n",
@@ -366,11 +369,11 @@
     "|                                                                                                            \t| Triple charge consistent electrons            \t|                                               \t|\n",
     "|                                                                                                            \t| Muons with $\\Delta p_T / p_T$ < 0.2           \t|                                               \t|\n",
     "\n",
-    "<p>We reach some limitations of the columnar regime here, as we are forced to deal not with muons and electrons, but with \"leptons\". We're currently constrained to either looking at electrons or muons, and thus we don't have an easy combined \"lepton\" object to work with. And there are many ways that the three-lepton requirement, for example, could be met: eee, mumumu, eemu, emumu.</p>\n",
+    "<p>We reach some limitations of the columnar regime here, as we are forced to deal not with muons and electrons, but with \"leptons\". We're currently constrained to either looking at electrons or muons, and thus we don't have an easy combined \"lepton\" object to work with (at least, not yet; the future may be brighter!) This is unfortunate, because there are many ways that the three-lepton requirement, for example, could be met: eee, mumumu, eemu, emumu.</p>\n",
     "\n",
     "<p>Considering each of these combinations makes a columnar approach a bit more cumbersome. Worse, there's no general solution for dealing with <b>n</b> leptons. In the dilepton channel, there's 3 possible combinations, in the three-lepton, 4, in the n-lepton, n+1. This is hardly ideal; it's certainly, at least, much less pretty than the lepton selection was.</p>  \n",
     "\n",
-    "<p>At this point, I made the decision not to get bogged down in columnar operations, and instead to take a more familiar event-loop-like approach. Before going into details, it's important to understand the structure of our lepton arrays a little more: every jagged array has a \".content\" attribute which removes the jaggedness and returns a flat array, and it also has a \".starts\" and \".stops\" attribute which delineates where a subarray begins and ends.</p>"
+    "<p>At this point, I made the decision not to get bogged down in columnar operations, and instead to take a more familiar event-loop-like approach. Before going into details, it's important to understand the structure of our <code>Muon</code> and <code>Electron</code> arrays a little more: every jagged array has a <code>.content</code> attribute which removes the jaggedness and returns a flat array, and it also has a <code>.starts</code> and <code>.stops</code> attribute which delineates where a subarray begins and ends.</p>"
    ]
   },
   {
@@ -411,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>This allows us to deconstruct our electron and muon arrays into their constituent event subarrays, which we can then concatenate together to get a per-event lepton array. We can check whether this lepton array meets our event requirements, and return either a True or a False. By looping through every single event, we can construct a whole array of booleans from this lepton array, which is shaped like the events array, and which will serve as a mask, allowing us to return to a columnar approach.</p>\n",
+    "<p>This allows us to deconstruct our electron and muon arrays into their constituent event subarrays, which we can then concatenate together to get a per-event lepton array. We can check whether this lepton array meets our event requirements, and return either a <code>True</code> or a <code>False</code>. By looping through every single event, we can construct a whole array of booleans from this lepton array, which is shaped like the events array, and which will serve as a mask, allowing us to return to a columnar approach.</p>\n",
     "\n",
     "<p>Okay, that all sounds complicated. Let's implement it for our first requirement in both channels: we don't want any loose leptons with $m_{ll} < 12 GeV$.</p>"
    ]
@@ -594,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From here, we can break our results naturally into different channels in a columnar fashion. For example, mumu events are simply those where 'tight_ll_muons.counts == 2,' as the dileptonMask guarantees events with 2 leptons, and 2 muons thus implies 0 electrons."
+    "From here, we can break our results naturally into different channels in a columnar fashion. For example, mumu events are simply those where <code>tight_ll_muons.counts == 2</code>, as the dileptonMask guarantees events with 2 leptons, and 2 muons thus implies 0 electrons."
    ]
   },
   {
@@ -681,7 +684,7 @@
    "metadata": {},
    "source": [
     "<h2>Demo</h2>\n",
-    "<p>To top all of this, Coffea has tools that make scale-out easy. All we do is bundle everything we have done up until now inside of the 'process.ProcessorABC' class. This class allows our analysis to run simply across many files and to deploy on an executor. If you want to test this locally, the futures_executor is the easiest to use. I, however, will be giving a demo of the analysis deployed on a Dask cluster, the details of which were presented by Oksana Shadura earlier this week.</p>"
+    "<p>To top all of this, Coffea has tools that make scale-out easy. All we do is bundle everything we have done up until now inside of the <code>process.ProcessorABC</code> class. This class allows our analysis to run simply across many files and to deploy on an executor. If you want to test this locally, the futures_executor is the easiest to use. I, however, will be giving a demo of the analysis deployed on a Dask cluster, the details of which were presented by Oksana Shadura earlier this week.</p>"
    ]
   },
   {
