clarified jet selection

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
       "[<event 0> <event 1> <event 2> ... <event 99997> <event 99998> <event 99999>]\n",
       "\n",
       "\n",
-      "['fixedGridRhoFastjetCentralChargedPileUp', 'LHEScaleWeight', 'ChsMET', 'genTtbarId', 'SV', 'Generator', 'LHEPart', 'GenDressedLepton', 'run', 'L1PreFiringWeight', 'SoftActivityJetNjets2', 'Photon', 'Electron', 'OtherPV', 'L1', 'genWeight', 'PSWeight', 'fixedGridRhoFastjetCentralNeutral', 'Tau', 'GenMET', 'LHE', 'RawMET', 'MET', 'SoftActivityJetHT5', 'SoftActivityJetHT2', 'FatJet', 'SoftActivityJetHT10', 'IsoTrack', 'Muon', 'Jet', 'SoftActivityJetHT', 'luminosityBlock', 'Pileup', 'GenPart', 'fixedGridRhoFastjetCentral', 'CorrT1METJet', 'GenJetAK8', 'GenVisTau', 'LHEReweightingWeight', 'SoftActivityJetNjets10', 'HLTriggerFinalPath', 'SubJet', 'TkMET', 'Flag', 'PuppiMET', 'LHEPdfWeight', 'SubGenJetAK8', 'GenJet', 'fixedGridRhoFastjetCentralCalo', 'SoftActivityJet', 'L1simulation', 'btagWeight', 'fixedGridRhoFastjetAll', 'TrigObj', 'event', 'HTXS', 'HLTriggerFirstPath', 'PV', 'CaloMET', 'LHEWeight', 'SoftActivityJetNjets5', 'HLT']\n"
+      "['SubGenJetAK8', 'Electron', 'luminosityBlock', 'MET', 'GenJetAK8', 'LHEScaleWeight', 'LHEPdfWeight', 'event', 'SoftActivityJet', 'SV', 'Pileup', 'FatJet', 'GenJet', 'HLT', 'RawMET', 'SoftActivityJetHT', 'HTXS', 'Tau', 'CaloMET', 'OtherPV', 'PV', 'run', 'L1', 'GenMET', 'SoftActivityJetHT10', 'LHEReweightingWeight', 'Flag', 'Jet', 'SubJet', 'HLTriggerFinalPath', 'L1PreFiringWeight', 'genTtbarId', 'fixedGridRhoFastjetCentralNeutral', 'LHE', 'L1simulation', 'TkMET', 'LHEPart', 'CorrT1METJet', 'Muon', 'GenDressedLepton', 'LHEWeight', 'TrigObj', 'fixedGridRhoFastjetCentralChargedPileUp', 'HLTriggerFirstPath', 'btagWeight', 'fixedGridRhoFastjetAll', 'SoftActivityJetNjets2', 'ChsMET', 'PuppiMET', 'SoftActivityJetHT5', 'fixedGridRhoFastjetCentralCalo', 'PSWeight', 'fixedGridRhoFastjetCentral', 'Photon', 'SoftActivityJetNjets10', 'IsoTrack', 'SoftActivityJetHT2', 'SoftActivityJetNjets5', 'Generator', 'GenPart', 'GenVisTau', 'genWeight']\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "array(['a', 'b', 'c'], dtype='<U1')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
     "| No loose leptons with $m_{ll}$ < 12 GeV                                                                                                                       \t| No ee events with \\|$m_{ee} - m_Z$\\| < 10 GeV \t| No OSSF pair with \\|$m_{ll} - m_Z$\\| < 15 GeV \t|\n",
     "|                                                                                                                                                               \t| Muons with $\\Delta p_T / p_T$ < 0.2           \t|                                               \t|\n",
     "\n",
-    "We will quickly find that we run into some issues here with our columnar approach. Before diving into those, though, we can get something more column-friendly out of the way: the jet selections for both channels. We'll generate the masks explicitly and just hang on to them for now."
+    "We will quickly find that we run into some issues here with our columnar approach. Before diving into those, though, we can get something more column-friendly out of the way: the jet selections for both channels. We'll generate the masks explicitly and just hang on to them for now. Note that we're only interested in having <b>at least one</b> jet passing or failing the respective working points, so while any conditionals we make are per-jet, what we actually want is a per-event mask. We can sum the <code>True</code>s in each subarray and make sure there is at least one, since they are equivalent to 1 (and <code>False</code> is 0)."
    ]
   },
   {
@@ -438,7 +438,13 @@
     "jets = events.Jet\n",
     "\n",
     "jetMask_medium = ((np.abs(jets.eta) < 2.4) & (jets.pt > 25) &\n",
-    "                  (jets.btagCSVV2 > medium_wp)).sum() >= 1\n",
+    "                  (jets.btagCSVV2 > medium_wp))\n",
+    "print('Jet Level (all jets)')\n",
+    "print(jetMask_medium)\n",
+    "jetMask_medium = jetMask_medium.sum() >= 1\n",
+    "print('\\nEvent Level (at least one jet)')\n",
+    "print(jetMask_medium)\n",
+    "\n",
     "jetMask_loose = ((((np.abs(jets.eta) < 2.4) & (jets.pt > 25)) | ((jets.pt > 40) & (np.abs(jets.eta) > 2.4))) &\n",
     "                 (jets.btagCSVV2 <= loose_wp)).sum() >= 1"
    ]
@@ -675,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -689,10 +695,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f99e1b5b990>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc362997c90>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -754,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -792,16 +798,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Table [(<Jet 576>, <Jet 577>) (<Jet 1874>, <Jet 1870>) (<Jet 1989>, <Jet 1995>) ... (<Jet 794903>, <Jet 794907>) (<Jet 802589>, <Jet 802591>) (<Jet 804977>, <Jet 804976>)] at 0x7f99eedfa190>"
+       "<Table [(<Jet 576>, <Jet 577>) (<Jet 1874>, <Jet 1870>) (<Jet 1989>, <Jet 1995>) ... (<Jet 794903>, <Jet 794907>) (<Jet 802589>, <Jet 802591>) (<Jet 804977>, <Jet 804976>)] at 0x7fc360181990>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -834,10 +840,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f99ec94a6d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc3601ff990>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
