--- a/analysis-casa.ipynb
+++ b/analysis-casa.ipynb
@@ -805,7 +805,10 @@
     "        # Respectively; each event should have exactly 1 pair (2 leptons) with same charge\n",
     "        #               one should have pT > 25 (pT > 15 is guaranteed by lepton selection)\n",
     "        #               for ee events, check that mass from Z is < 10 to veto possible Z bosons.\n",
-    "        dileptonMask = ((tight_pairs.counts == 1) & (tight_leptons[tight_pairs.i0].charge == tight_leptons[tight_pairs.i1].charge).any()) & ((tight_leptons[tight_pairs.i0].p4.pt > 25) | (tight_leptons[tight_pairs.i1].p4.pt > 25)).any() & ((tight_types < 2) | (np.abs((tight_leptons[tight_pairs.i0].p4 + tight_leptons[tight_pairs.i1].p4).mass - 91.18) > 10)).any()\n",
+    "        dileptonMask = (tight_pairs.counts == 1) &\n",
+    "                        (tight_leptons[tight_pairs.i0].charge == tight_leptons[tight_pairs.i1].charge).any() &\n",
+    "                        ((tight_leptons[tight_pairs.i0].p4.pt > 25) | (tight_leptons[tight_pairs.i1].p4.pt > 25)).any() &\n",
+    "                        ((tight_types < 2) | (np.abs((tight_leptons[tight_pairs.i0].p4 + tight_leptons[tight_pairs.i1].p4).mass - 91.18) > 10)).any()\n",
     "        \n",
     "        # Trilepton selection.\n",
     "        tight_triples = tight_leptons.argchoose(3)\n",
@@ -814,7 +817,9 @@
     "        \n",
     "        # Respectively; we want events with exactly three tight leptons (one triple),\n",
     "        #               one should have pT > 25, discard if OSSF dileptons are close to the Z mass.\n",
-    "        trileptonMask = (tight_triples.counts == 1) & ((tight_leptons[tight_triples.i0].p4.pt > 25) | (tight_leptons[tight_triples.i1].p4.pt > 25) | (tight_leptons[tight_triples.i2].p4.pt > 25)).any() & (~ossf_zmass_check(tight_muon_pairs)) & (~ossf_zmass_check(tight_electron_pairs))\n",
+    "        trileptonMask = (tight_triples.counts == 1) &\n",
+    "                        ((tight_leptons[tight_triples.i0].p4.pt > 25) | (tight_leptons[tight_triples.i1].p4.pt > 25) | (tight_leptons[tight_triples.i2].p4.pt > 25)).any() &\n",
+    "                        (~ossf_zmass_check(tight_muon_pairs)) & (~ossf_zmass_check(tight_electron_pairs))\n",
     "        \n",
     "        # Jet masks can be generated much more simply, since we're staying in one collection.\n",
     "        jetMask_medium = ((np.abs(jets.eta) < 2.4) & (jets.btagCSVV2 > medium_wp)).sum() >= 1\n",
