--- a/analysis-local.ipynb
+++ b/analysis-local.ipynb
@@ -339,9 +339,10 @@
     "        # Respectively; each event should have exactly 1 pair (2 leptons) with same charge\n",
     "        #               one should have pT > 25 (pT > 15 is guaranteed by lepton selection)\n",
     "        #               for ee events, check that mass from Z is < 10 to veto possible Z bosons.\n",
-    "        dileptonMask = ((tight_pairs.counts == 1) & (tight_leptons[tight_pairs.i0].charge == tight_leptons[tight_pairs.i1].charge).any() &\n",
+    "        dileptonMask = (tight_pairs.counts == 1) &\n",
+    "                        (tight_leptons[tight_pairs.i0].charge == tight_leptons[tight_pairs.i1].charge).any() &\n",
     "                        ((tight_leptons[tight_pairs.i0].p4.pt > 25) | (tight_leptons[tight_pairs.i1].p4.pt > 25)).any() &\n",
-    "                        ((tight_types < 2) | (np.abs((tight_leptons[tight_pairs.i0].p4 + tight_leptons[tight_pairs.i1].p4).mass - 91.18) > 10)).any())\n",
+    "                        ((tight_types < 2) | (np.abs((tight_leptons[tight_pairs.i0].p4 + tight_leptons[tight_pairs.i1].p4).mass - 91.18) > 10)).any()\n",
     "        \n",
     "        # Trilepton selection.\n",
     "        tight_triples = tight_leptons.argchoose(3)\n",
@@ -350,9 +351,9 @@
     "        \n",
     "        # Respectively; we want events with exactly three tight leptons (one triple),\n",
     "        #               one should have pT > 25, discard if OSSF dileptons are close to the Z mass.\n",
-    "        trileptonMask = ((tight_triples.counts == 1) &\n",
+    "        trileptonMask = (tight_triples.counts == 1) &\n",
     "                        ((tight_leptons[tight_triples.i0].p4.pt > 25) | (tight_leptons[tight_triples.i1].p4.pt > 25) | (tight_leptons[tight_triples.i2].p4.pt > 25)).any() &\n",
-    "                        (~ossf_zmass_check(tight_muon_pairs)) & (~ossf_zmass_check(tight_electron_pairs)))\n",
+    "                        (~ossf_zmass_check(tight_muon_pairs)) & (~ossf_zmass_check(tight_electron_pairs))\n",
     "        \n",
     "        # Jet masks can be generated much more simply, since we're staying in one collection.\n",
     "        jetMask_medium = ((np.abs(jets.eta) < 2.4) & (jets.btagCSVV2 > medium_wp)).sum() >= 1\n",
@@ -1038,9 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('Three Lepton Channel')\n",
@@ -1099,9 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('mu-mu Channel')\n",
@@ -1160,9 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('e-mu Channel')\n",
@@ -1221,9 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('e-e Channel')\n",
@@ -1324,5 +1317,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
