more syntax fixes

--- a/analysis-casa.ipynb
+++ b/analysis-casa.ipynb
@@ -805,10 +805,10 @@
     "        # Respectively; each event should have exactly 1 pair (2 leptons) with same charge\n",
     "        #               one should have pT > 25 (pT > 15 is guaranteed by lepton selection)\n",
     "        #               for ee events, check that mass from Z is < 10 to veto possible Z bosons.\n",
-    "        dileptonMask = (tight_pairs.counts == 1) &\n",
+    "        dileptonMask = ((tight_pairs.counts == 1) &\n",
     "                        (tight_leptons[tight_pairs.i0].charge == tight_leptons[tight_pairs.i1].charge).any() &\n",
     "                        ((tight_leptons[tight_pairs.i0].p4.pt > 25) | (tight_leptons[tight_pairs.i1].p4.pt > 25)).any() &\n",
-    "                        ((tight_types < 2) | (np.abs((tight_leptons[tight_pairs.i0].p4 + tight_leptons[tight_pairs.i1].p4).mass - 91.18) > 10)).any()\n",
+    "                        ((tight_types < 2) | (np.abs((tight_leptons[tight_pairs.i0].p4 + tight_leptons[tight_pairs.i1].p4).mass - 91.18) > 10)).any())\n",
     "        \n",
     "        # Trilepton selection.\n",
     "        tight_triples = tight_leptons.argchoose(3)\n",
@@ -817,9 +817,9 @@
     "        \n",
     "        # Respectively; we want events with exactly three tight leptons (one triple),\n",
     "        #               one should have pT > 25, discard if OSSF dileptons are close to the Z mass.\n",
-    "        trileptonMask = (tight_triples.counts == 1) &\n",
+    "        trileptonMask = ((tight_triples.counts == 1) &\n",
     "                        ((tight_leptons[tight_triples.i0].p4.pt > 25) | (tight_leptons[tight_triples.i1].p4.pt > 25) | (tight_leptons[tight_triples.i2].p4.pt > 25)).any() &\n",
-    "                        (~ossf_zmass_check(tight_muon_pairs)) & (~ossf_zmass_check(tight_electron_pairs))\n",
+    "                        (~ossf_zmass_check(tight_muon_pairs)) & (~ossf_zmass_check(tight_electron_pairs)))\n",
     "        \n",
     "        # Jet masks can be generated much more simply, since we're staying in one collection.\n",
     "        jetMask_medium = ((np.abs(jets.eta) < 2.4) & (jets.btagCSVV2 > medium_wp)).sum() >= 1\n",
@@ -1036,30 +1036,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e5713694fbe40d5bd358d58978ffa66",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Preprocessing', max=119.0, style=ProgressStyle(descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "distributed.scheduler - INFO - Clear task state\n",
+      "distributed.scheduler - INFO -   Scheduler at: tls://192.168.49.147:8787\n",
+      "distributed.scheduler - INFO -   dashboard at:                     :8786\n",
+      "distributed.scheduler - INFO - Receive client connection: Client-8dfb7394-c4ad-11ea-82ec-123f074879da\n",
+      "distributed.core - INFO - Starting established connection\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'true' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-8a576117230a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m exe_args = {\n\u001b[1;32m     11\u001b[0m         \u001b[0;34m'client'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0;34m'nano'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     }\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'true' is not defined"
      ]
     }
    ],
