re-added support functions

--- a/analysis-local.ipynb
+++ b/analysis-local.ipynb
@@ -149,6 +149,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "# This is a helper function which adds muon (0) and electron (1) identifiers to a stacked lepton JaggedArray.\n",
+    "def make_labeled_p4(x, indices, itype):\n",
+    "    p4 = TLorentzVectorArray.from_ptetaphim(x.pt, x.eta, x.phi, x.mass)\n",
+    "    return ak.JaggedArray.zip(p4=p4,\n",
+    "                              ptype=itype*x.pt.ones_like().astype(np.int),\n",
+    "                              pidx=indices,\n",
+    "                              charge=x.charge)\n",
+    "\n",
+    "# This generates a stacked lepton JaggedArray, allowing combination of both muons and electrons for computations across flavor.\n",
+    "def stack_leptons(muons, electrons):\n",
+    "    # Construct new lepton indices within every event array.\n",
+    "    muons_indices = ak.JaggedArray.fromoffsets(muons.pt.offsets, \n",
+    "                                             np.arange(0, muons.pt.content.size)) - muons.pt.offsets[:-1]\n",
+    "    electrons_indices = ak.JaggedArray.fromoffsets(electrons.pt.offsets, \n",
+    "                                             np.arange(0, electrons.pt.content.size)) - electrons.pt.offsets[:-1]\n",
+    "    # Assign 0/1 value depending on whether lepton is muon/electron.\n",
+    "    muons_p4 = make_labeled_p4(muons, muons_indices, 0)\n",
+    "    electrons_p4 = make_labeled_p4(electrons, electrons_indices, 1)\n",
+    "    # Concatenate leptons.\n",
+    "    stacked_p4 = ak.concatenate((muons_p4, electrons_p4), axis=1)\n",
+    "    \n",
+    "    return stacked_p4\n",
+    "\n",
+    "# Helper function which takes a pair, tells you if it is an OSSF with |m_ll - m_z| < 15. Reject these events.\n",
+    "def ossf_zmass_check(dileptons):\n",
+    "    return ((dileptons.i0.charge != dileptons.i1.charge) & \n",
+    "            (np.abs(91.18 - (dileptons.i0 + dileptons.i1).mass) < 15.)).any()\n",
+    "\n",
+    "# This is a helper function which adds up the transverse momentum of two leptons from their x and y components.\n",
+    "@nb.njit()\n",
+    "def ptAddition(l1_px, l1_py, l2_px, l2_py):\n",
+    "    return np.sqrt((l1_px + l2_px)**2 + (l1_py + l2_py)**2)\n",
+    "\n",
+    "# This takes as input values from the trilepton channel and outputs an array with del(phi) between the two highest sslps.\n",
+    "def channel_dphi_ssp(e_starts, e_stops, mu_starts, mu_stops,\n",
+    "                     e_px, e_py, e_phi, mu_px, mu_py, mu_phi, \n",
+    "                     e_charge, mu_charge):\n",
+    "    dphi = np.zeros(e_starts.size)\n",
+    "    dphi.fill(-np.inf)\n",
+    "    for e_start, e_stop, mu_start, mu_stop, i in zip(e_starts, e_stops, mu_starts, mu_stops, range(0, e_starts.size)):\n",
+    "        event_px = np.concatenate((e_px[e_start:e_stop], mu_px[mu_start:mu_stop]))\n",
+    "        event_py = np.concatenate((e_py[e_start:e_stop], mu_py[mu_start:mu_stop]))\n",
+    "        event_phi = np.concatenate((e_phi[e_start:e_stop], mu_phi[mu_start:mu_stop]))\n",
+    "        event_charge = np.concatenate((e_charge[e_start:e_stop], mu_charge[mu_start:mu_stop]))\n",
+    "        maxpt = -np.inf\n",
+    "        pair = (None, None)\n",
+    "        for combination in np.array(list(combinations(np.argsort(event_px), 2))):\n",
+    "            if (np.abs(event_charge[combination[0]] + event_charge[combination[1]]) == 2):\n",
+    "                pair_pt = ptAddition(event_px[combination[0]], event_py[combination[0]], event_px[combination[1]], event_px[combination[1]])\n",
+    "                if pair_pt > maxpt:\n",
+    "                    maxpt = pair_pt\n",
+    "                    pair = (combination[0], combination[1])\n",
+    "        if pair != (None, None):\n",
+    "            dphi[i] = np.abs(event_phi[pair[0]] - event_phi[pair[1]])\n",
+    "    return dphi[np.invert(np.isinf(dphi))]\n",
+    "\n",
+    "# This take as input values from  a cross-lepton channel and outputs the eta difference of the closest leptons (in eta) to each event's most forward jet.\n",
+    "def channel_fwdeta_jetlep(e_starts, e_stops, mu_starts, mu_stops,\n",
+    "                          jet_maxeta, e_eta, mu_eta):\n",
+    "    deta = np.zeros(e_starts.size)\n",
+    "    deta.fill(-np.inf)\n",
+    "    for e_start, e_stop, mu_start, mu_stop, i in zip(e_starts, e_stops, mu_starts, mu_stops, range(0, e_starts.size)):\n",
+    "        jet = jet_maxeta[i]\n",
+    "        event_eta = np.concatenate((e_eta[e_start:e_stop], mu_eta[mu_start:mu_stop]))\n",
+    "        deta[i] = np.min(np.abs(jet - event_eta))\n",
+    "    return deta"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
