--- a/analysis-local.ipynb
+++ b/analysis-local.ipynb
@@ -11,8 +11,10 @@
     "import os\n",
     "import numpy as np\n",
     "import numba as nb\n",
+    "import awkward as ak\n",
     "import matplotlib.pyplot as plt\n",
     "import uproot\n",
+    "from uproot_methods import TLorentzVectorArray\n",
     "from coffea import hist\n",
     "from coffea.analysis_objects import JaggedCandidateArray\n",
     "from cycler import cycler\n",
