--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -181,7 +181,7 @@
     "\n",
     "<h3><center>Muon Selection</center></h3>\n",
     "\n",
-    "<img src=\"./docs/muon_selection_tabular.png\"/>\n",
+    "<center><img src=\"./docs/muon_selection_tabular.png\"/></center>\n",
     "\n",
     "How would we make these cuts with our columnar tools? An easy three-step plan: \n",
     "<ol>\n",
@@ -238,7 +238,7 @@
     "\n",
     "<h3><center>Electron Selection</center></h3>\n",
     "\n",
-    "<img src=\"./docs/electron_selection_tabular.png\"/>\n",
+    "<center><img src=\"./docs/electron_selection_tabular.png\"/></center>\n",
     "\n",
     "A cell has been provided, again, for column-prodding purposes."
    ]
@@ -302,7 +302,7 @@
     "<h2>Event Selections</h2>\n",
     "<p>Okay, now that we've selected some good leptons, let's follow the event selection as prescribed:</p>\n",
     "\n",
-    "<img src=\"./docs/event_selection_tabular.png\"/>\n",
+    "<center><img src=\"./docs/event_selection_tabular.png\"/></center>\n",
     "\n",
     "In order to simplify some of these complex cuts, we're just going to go step-by-step in generating masks for each condition, and then we'll combine them all at the end. We begin with the jet cuts. Note that we're only interested in having <b>at least one</b> jet passing or failing the respective working points, so while any conditionals we make are per-jet, what we actually want is a per-event mask. We can sum the <code>True</code>s in each subarray and make sure there is at least one, since they are equivalent to 1 (and <code>False</code> is 0)."
    ]
@@ -509,7 +509,7 @@
    "source": [
     "Okay, back to the columnar representation. There are still selections we need to make for the dilepton and three-lepton channels. A reminder:\n",
     "\n",
-    "<img src=\"./docs/event_selection_tabular.png\"/>\n",
+    "<center><img src=\"./docs/event_selection_tabular.png\"/></center>\n",
     "\n",
     "We will now implement the rest of these, making use of our stacked array object."
    ]
